trying to fix gif --2
trying to fix gif on the first scene button css

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -440,7 +440,7 @@ line-height: 1.1;
 
 		a:hover {
 			color:white;
-      background: url(/images/cloudgif.gif);
+      background: url(/cloudgif.gif);
       /*hello*/
 		}
 
