--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -440,7 +440,7 @@ line-height: 1.1;
 
 		a:hover {
 			color:white;
-      background: url(../images/biases.jpg);
+      background: url(./images/biases.jpg);
       /*hello*/
 		}
 
